[Init] 프로젝트 초기 프레임워크 설계

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">SeeMeet</string>
+
+    <!-- Login -->
+    <string name="label_login">LogIn</string>
+
+    <!-- Main -->
+    <string name="label_home">Home</string>
+    <string name="label_apply">Apply</string>
+    <string name="label_calendar">Calendar</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
