--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,8 @@
     <string name="friend_search">검색</string>
     <string name="friend_request">친구 요청</string>
     <string name="friend_favorite">즐겨찾기</string>
+    <string name="friend_confirm">확인</string>
+    <string name="friend_delete">삭제</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
