--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,7 +45,14 @@
     <string name="home_drawer_close">drawer close</string>
     <string name="home_mypage">MY PAGE</string>
     <string name="title_activity_register">RegisterActivity</string>
+
+    <!--noti -->
+    <string name="noti_title">약속 내역</string>
+    <string name="noti_inprogress">진행 중</string>
+    <string name="noti_done">완료</string>
+
     <!-- Strings used for fragments for navigation -->
+
     <string name="first_fragment_label">First Fragment</string>
     <string name="second_fragment_label">Second Fragment</string>
     <string name="next">Next</string>
