[MOD] 약속내역 완료 아이템 구현

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,6 +63,10 @@
     <string name="noti_done_num">4</string>
     <string name="noti_num">건</string>
     <string name="noti_done2">되었어요</string>
+    <string name="noti_confirm_or_cancel">약속 확정</string>
+    <string name="noti_done_title">강화도 여행</string>
+
+
 
 
 
