--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,10 +29,8 @@
     <!-- Friend -->
     <string name="friend_friend">친구</string>
     <string name="friend_search">친구 검색</string>
+    <string name="friend_add_search">친구 아이디</string>
     <string name="friend_request">친구 요청</string>
-    <string name="friend_favorite">즐겨찾기</string>
-    <string name="friend_confirm">확인</string>
-    <string name="friend_delete">삭제</string>
 
     <!-- AddFriend -->
     <string name="friend_add">친구 추가</string>
