--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -94,4 +94,10 @@
     <string name="recieve_choice_msg">내 일정과 비교하며\n날짜를 선택해보세요!</string>
     <string name="recieve_btn_yes">수락</string>
     <string name="recieve_btn_no">거절</string>
+    <string name="title_activity_test">TestActivity</string>
+    <string name="title_activity_main">MainActivity</string>
+    <string name="title_home">Home</string>
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_notifications">Notifications</string>
+    <string name="title_activity_timepicker">TimepickerActivity</string>
 </resources>
