--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,13 +11,13 @@
 
     <!-- Register -->
     <string name="register_name">이름</string>
-    <string name="register_id">아이디</string>
-    <string name="register_sex">성별</string>
-    <string name="register_male">남</string>
-    <string name="register_female">여</string>
     <string name="register_register">회원가입</string>
-    <string name="register_birth">생년월일</string>
     <string name="register_checkpw">비밀번호 확인</string>
+    <string name="register_registeredEmail">이미 등록된 이메일이에요.</string>
+    <string name="register_incorrectEmail">올바른 이메일을 입력해주세요</string>
+    <string name="register_lengthPassword">8자 이상의 비밀번호를 입력해주세요.</string>
+    <string name="register_formatPassword">영문, 숫자, 특수문자 중 2가지 이상을 사용해주세요.</string>
+    <string name="register_incorrectPassword">비밀번호가 일치하지 않아요.</string>
 
     <!-- Main -->
     <string name="label_home">Home</string>
@@ -33,7 +33,6 @@
     <string name="mypage_privacy_policy">개인정보 정책</string>
     <string name="mypage_open_source">오픈소스</string>
 
-
     <!-- Friend -->
     <string name="friend_friend">친구</string>
     <string name="friend_search">친구 검색</string>
@@ -41,12 +40,8 @@
     <string name="friend_request">친구 요청</string>
     <string name="friend_null">등록된 친구가 없어요!\n친구를 추가해주세요</string>
 
-
     <!-- AddFriend -->
     <string name="friend_add">친구 추가</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <!-- home -->
     <string name="home_drawer_open">drawer open</string>
@@ -81,16 +76,6 @@
     <string name="detail_delete">약속 삭제</string>
     <string name="detail_divider">|</string>
     <string name="detail_host">약속 주최자</string>
-
-    <!-- Strings used for fragments for navigation -->
-
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
-
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 
     <!-- recieve -->
     <string name="recieve_top_msg">새로운 초대장</string>
